--- a/TubesArea/1717562801-OKYZ.md
+++ b/TubesArea/1717562801-OKYZ.md
@@ -12,7 +12,7 @@ tags: []
     sudo apt-get update
     sudo apt-get install openssl
 ## Enkripsi 
-    openssl aes-256-cbc -salt -in file.txt -out file.txt.enc
+    openssl aes-256-cbc -salt -pbkdf2 -in halo.txt -out file.txt.enc
  Penjelasan:
     enc: Menyatakan bahwa Anda menggunakan perintah untuk mengenkripsi atau mendekripsi data.
     -aes-256-cbc: Algoritma enkripsi yang digunakan, yaitu AES-256 dalam mode CBC.
@@ -20,7 +20,7 @@ tags: []
     -in file.txt: File input yang akan dienkripsi.
     -out file.txt.enc: File output yang dienkripsi.
 ## Dekripsi  
-    openssl aes-256-cbc -d -in file.txt.enc -out file_decrypted.txt
+    openssl aes-256-cbc -d -salt -pbkdf2 -in file.txt.enc -out decrypted_halo.txt
 Penjelasan: 
 -d: Menyatakan bahwa perintah digunakan untuk mendekripsi data.
 -in file.txt.enc: File input yang dienkripsi.
